--- a/package.json
+++ b/package.json
@@ -8,10 +8,19 @@
     "test": "jest",
     "prepare": "cd .. && husky install sports_scheduler/.husky"
   },
+  "lint-staged": {
+    "*.js": [
+      "eslint",
+      "prettier --write ."
+    ]
+  },
   "author": "vineetha",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^8.40.0",
     "husky": "^8.0.3",
-    "jest": "^29.5.0"
+    "jest": "^29.5.0",
+    "lint-staged": "^13.2.2",
+    "prettier": "^2.8.8"
   }
 }
