--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon -e js,ejs",
     "test": "jest",
     "prepare": "cd .. && husky install sports_scheduler/.husky"
   },
@@ -21,10 +21,12 @@
     "husky": "^8.0.3",
     "jest": "^29.5.0",
     "lint-staged": "^13.2.2",
+    "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
     "sequelize-cli": "^6.6.0"
   },
   "dependencies": {
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "pg": "^8.11.0",
     "sequelize": "^6.31.1"
